[tool.poetry]
name = "accounts"
version = "1.0.0"
description = ""
authors = ["Elena Solonina <solonina37@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
unittest = "^0.0"
coverage = "^5.5"
nose = "^1.3.7"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scr = 'src.accounts:Standard_account'
